--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>And I'm a <span class="multiple-texts"></span></h3>
             <p>Aspiring Software Developer with a strong foundation in Data Structures and algorithms. Passionate about
                 building and creating different projects into scalable applications.</p>
-            <a href="https://drive.google.com/file/d/1ILvfta9QL5HzxeuQC1HPlzEGO7u0JaUy/view?usp=sharing"
+            <a href="resume.pdf"
                 class="btn">View Resume</a>
         </div>
     </section>
@@ -254,5 +254,6 @@
     <script src="script.js"></script>
 
 </body>
+
 
 </html>
