--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h3>And I'm a <span class="multiple-texts"></span></h3>
             <p>Aspiring Software Developer with a strong foundation in Data Structures and algorithms. Passionate about
                 building and creating different projects into scalable applications.</p>
-            <a href="resume.pdf"
+            <a href="yash_resume_with_photo.pdf"
                 class="btn">View Resume</a>
         </div>
     </section>
@@ -257,3 +257,4 @@
 
 
 </html>
+
