--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <img src="portfolio1.jpg" alt="p1">
                 <div class="portfolio-layer">
                     <h4>Movies Recommendation System</h4>
-                    <a href="http://192.168.29.152:8501"><i class="bx bx-link-external"></i></a>
+                    <a href="https://movies-recommender-system-12.onrender.com"><i class="bx bx-link-external"></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -257,4 +257,5 @@
 
 
 </html>
+
 
